--- a/package.json
+++ b/package.json
@@ -10,8 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "aos": "^2.3.4",
+    "bootstrap": "^5.3.3",
+    "framer-motion": "^12.4.7",
+    "lucide-react": "^0.475.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-bootstrap": "^2.10.9",
+    "react-bootstrap-icons": "^1.11.5",
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.4.0",
+    "sass": "^1.84.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
