--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "react-bootstrap": "^2.10.9",
     "react-bootstrap-icons": "^1.11.5",
     "react-dom": "^18.3.1",
+    "react-helmet": "^6.1.0",
+    "react-helmet-async": "^2.0.5",
     "react-icons": "^5.4.0",
     "sass": "^1.84.0"
   },
